--- a/main.css
+++ b/main.css
@@ -1,27 +1,42 @@
-/*body {
-  background-color: #ccc;
-}
-#visualization {
-  margin: 50px; 
-  width: 500px; 
-  height: 400px; 
-  border-radius: 4px;
-  border: 1px solid #eee;
-  background-color: #fff; 
-}*/
+.chart {
+    background-color: #edf3ff;
 
-#xn_plot {
-	width:50%;
-	height:50%;
 }
 
-#yn_plot {
-	width:50%;
-	height:50%;
+. xn_plot {
+    background-color: #edf3ff;
 }
 
-#xy_plot {
-	width:50%;
-	height:100%;
+.main text {
+    /*font: 20px -apple-system;  */
+	font-size: 1em;
+    font-family: -apple-system, BlinkMacSystemFont, 
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", 
+    "Fira Sans", "Droid Sans", "Helvetica Neue", 
+    sans-serif;
+
 }
 
+.axis line, .axis path {
+    shape-rendering: crispEdges;
+    stroke: black;
+    fill: none;
+}
+
+circle {
+    fill: steelblue;
+}
+
+label {
+	font-size: 2em;
+	font-family: -apple-system, BlinkMacSystemFont, 
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", 
+    "Fira Sans", "Droid Sans", "Helvetica Neue", 
+    sans-serif;
+}
+
+
+input[type=range] {
+  width: 100%;
+  /*margin-bottom: 10px;*/
+}
