--- a/main.css
+++ b/main.css
@@ -27,16 +27,25 @@ circle {
     fill: steelblue;
 }
 
-label {
+/*label {
 	font-size: 2em;
 	font-family: -apple-system, BlinkMacSystemFont, 
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", 
     "Fira Sans", "Droid Sans", "Helvetica Neue", 
     sans-serif;
-}
+}*/
 
 
 input[type=range] {
   width: 100%;
   /*margin-bottom: 10px;*/
+}
+
+. content text{
+    font-size: 2em;
+    font-family: -apple-system, BlinkMacSystemFont, 
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", 
+    "Fira Sans", "Droid Sans", "Helvetica Neue", 
+    sans-serif;
+
 }
