--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .charts {
     display: flex;
     flex-direction: row;
@@ -23,7 +29,13 @@
 }
 
 h1 {
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: -apple-system, BlinkMacSystemFont, 
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", 
+    "Fira Sans", "Droid Sans", "Helvetica Neue", 
+    sans-serif;
+    /*text-align: center;*/
 }
 .axis line, .axis path {
     shape-rendering: crispEdges;
@@ -50,6 +62,7 @@ input[type=range] {
 }
 
 .links {
+    display: inline;
     margin: 1em;
     float: right;
 }
