--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@
     margin-left: 10px;
 }
 
-.xy_plot text {
+.charts text {
     /*font: 20px -apple-system;  */
 	font-size: 1em;
     font-family: -apple-system, BlinkMacSystemFont, 
@@ -58,7 +58,7 @@ input[type=range] {
   /*margin-bottom: 10px;*/
 }
 
-. body text{
+body text{
     font-size: 2em;
     font-family: -apple-system, BlinkMacSystemFont, 
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", 
