--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@
 
 .charts text {
     /*font: 20px -apple-system;  */
-	  font-size: 1em;
+	font-size: 1em;
     font-family: -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -40,12 +40,16 @@
 }
 
 h1 {
+    margin-top: 0;
+    margin-bottom: .5rem;
     margin-left: auto;
     margin-right: auto;
     font-family: -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+    font-weight: normal;
+    color: #292b2c;
     /*text-align: center;*/
 }
 
@@ -56,7 +60,8 @@ h1 {
 }
 
 circle {
-    fill: SeaGreen;
+    /*fill: SeaGreen;*/
+    fill: SpringGreen ;
 }
 
 label {
