--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@
 }
 
 .xn_yn_plots {
-    background-color: #f4f4f8;
+    background-color: #e0e0e0;
 }
 .xn_plot {
     background-color: #f4f4f8;
@@ -48,7 +48,6 @@
 }
 
 .charts text {
-    /*font: 20px -apple-system;  */
 	font-size: 1em;
     font-family: -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
